[package]
name = "bbqtest"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
bounded-spsc-queue = { version = "0.4.0", optional = true }

[dependencies.bbqueue]
path = "../core"


[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"
crossbeam-utils = "0.8.16"
crossbeam = "0.8.2"
heapless = "0.7.16"
cfg-if = "1.0.0"

[[bench]]
name = "benches"
harness = false
path = "src/benches.rs"

[features]
travisci = ["verbose"]
default = []
verbose = []
nightly = ["bounded-spsc-queue"]
extra-verbose = []
short-potato = []
